# mirage-tank

./: .gitignore  README.md  extract.bat  make.bat  pyproject.toml  tank.bat  view.bat
doc/: demo.md  matlab.m  ps.psd
mirage_tank/: cli.py  make.py
src/mirage_tank/: __init__.py  area.py  extract.py  make.py  make_partial.py
src/mirage_tank/maker/: algo.py  core.py  extract.py  make_classic.py  make_partial.py
src/mirage_tank/viewer/: app.py  index.html
tests/: test_area.py  test_maker.py  test_maker_algo.py
viewer/: app.py
