[project]
name = "mirage-tank"
version = "0.2.1"
description = "mirage tank maker and viewer"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "watchdog>=6.0.0",
]

[project.scripts]
make-tank = "mirage_tank.make:main"
extract-tank = "mirage_tank.extract:main"
view-tank = "mirage_tank.viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
