[project]
name = "mirage-tank"
version = "0.2.1"
description = "mirage tank maker and viewer"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "watchdog>=6.0.0",
]

[project.scripts]
make-tank = "mirage_tank.make:main"
make-partial-tank = "mirage_tank.make_partial:main"
extract-tank = "mirage_tank.extract:main"
view-tank = "mirage_tank.viewer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["matplotlib>=3.10.0", "pytest>=8.3.4"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py312"
lint.extend-select = ["I", "F403"]
